--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "echo 'No tests yet.'"
   },
   "engines": {
-    "node": ">=16.8.0",
-    "npm": ">=7.23.0"
+    "node": "^16.9.1",
+    "npm": "^7.24.0"
   },
   "repository": {
     "type": "git",
