--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "monokuma-message-monitor",
+  "name": "naomi-message-monitor",
   "version": "1.0.1",
-  "description": "A bot to count messages for a friend's server.",
+  "description": "A bot to count messages sent in a server.",
   "main": "./prod/index.js",
   "scripts": {
     "prebuild": "rm -rf ./prod",
@@ -16,15 +16,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nhcarrigan/monokuma-message-monitor.git"
+    "url": "git+https://github.com/nhcarrigan/discord-message-monitor.git"
   },
   "author": "Naomi Carrigan",
   "license": "AGPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/nhcarrigan/monokuma-message-monitor/issues"
+    "url": "https://github.com/nhcarrigan/discord-message-monitor/issues"
   },
-  "homepage": "https://github.com/nhcarrigan/monokuma-message-monitor#readme",
+  "homepage": "https://github.com/nhcarrigan/discord-message-monitor#readme",
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.12.1",
     "@typescript-eslint/parser": "5.12.1",
     "eslint": "8.10.0",
@@ -36,11 +37,14 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
     "@sentry/integrations": "^6.17.7",
     "@sentry/node": "^6.17.7",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "mongoose": "^6.1.7",
+    "uuid": "^8.3.2",
     "winston": "^3.4.0"
   }
 }
