--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/nhcarrigan/discord-message-counter#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.18.0",
     "@typescript-eslint/parser": "5.18.0",
@@ -43,6 +44,7 @@
     "@sentry/node": "^6.17.7",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "mongoose": "^6.1.7",
     "uuid": "^8.3.2",
     "winston": "^3.4.0"
