--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "echo 'No tests yet.'"
   },
   "engines": {
-    "node": "^18.0.0",
-    "npm": "^9.0.0"
+    "node": "18.15.0",
+    "npm": "9.6.2"
   },
   "repository": {
     "type": "git",
@@ -37,14 +37,14 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@discordjs/builders": "^1.0.0",
-    "@discordjs/rest": "^1.0.0",
-    "@sentry/integrations": "^7.0.0",
-    "@sentry/node": "^7.0.0",
-    "discord.js": "^14.0.0",
-    "dotenv": "^16.0.0",
-    "mongoose": "^7.0.0",
-    "uuid": "^9.0.0",
-    "winston": "^3.4.0"
+    "@discordjs/builders": "1.0.0",
+    "@discordjs/rest": "1.0.0",
+    "@sentry/integrations": "7.0.0",
+    "@sentry/node": "7.0.0",
+    "discord.js": "14.0.0",
+    "dotenv": "16.0.0",
+    "mongoose": "7.0.0",
+    "uuid": "9.0.0",
+    "winston": "3.4.0"
   }
 }
