--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/nhcarrigan/discord-message-counter.git"
   },
   "author": "Naomi Carrigan",
-  "license": "AGPL-3.0-or-later",
+  "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/nhcarrigan/discord-message-counter/issues"
   },
