--- a/.github/workflows/code-ql.yml
+++ b/.github/workflows/code-ql.yml
@@ -22,10 +22,14 @@ jobs:
         uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
       - name: Build files
-        run: npm run build
+        run: pnpm run build
       - name: Setup CodeQL
         uses: github/codeql-action/init@0225834cc549ee0ca93cb085b92954821a145866 # v2
         with:
