--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "engines": {
     "node": "18.16.0",
-    "npm": "9.6.7"
+    "pnpm": "8.6.12"
   },
   "repository": {
     "type": "git",
@@ -25,14 +25,11 @@
   },
   "homepage": "https://github.com/nhcarrigan/discord-message-counter#readme",
   "devDependencies": {
+    "@nhcarrigan/eslint-config": "1.1.3",
+    "@nhcarrigan/prettier-config": "1.0.1",
+    "@nhcarrigan/typescript-config": "1.0.1",
     "@types/uuid": "9.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "@typescript-eslint/parser": "5.59.7",
     "eslint": "8.41.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsdoc": "40.3.0",
-    "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.8.8",
     "typescript": "5.0.4"
   },
